--- a/hotel-booking/package.json
+++ b/hotel-booking/package.json
@@ -14,8 +14,7 @@
     "@tailwindcss/vite": "^4.1.13",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.1",
-    "tailwindcss": "^4.1.13"
+    "react-router-dom": "^7.9.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
@@ -26,6 +25,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
+    "tailwindcss": "^4.1.13",
     "vite": "^7.1.6"
   }
 }
